# mountain

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
hiking_data_starter/hiking_data/: README.md  debug.json  keys.txt  pyproject.toml  requirements.txt  tmp_pptx.txt
hiking_data_starter/hiking_data/data/processed/: forest_mountains.csv  forest_mountains_clean.csv
hiking_data_starter/hiking_data/data/raw/: forest_mountains_raw.csv
hiking_data_starter/hiking_data/data/raw/국립공원공단_국립공원 선형시설_20181231/: 국립공원시설_선형시설.dbf  국립공원시설_선형시설.sbn  국립공원시설_선형시설.sbx  국립공원시설_선형시설.shp  국립공원시설_선형시설.shp.xml  국립공원시설_선형시설.shx
hiking_data_starter/hiking_data/notebooks/: 01_explore.py  02_forest_visualize.py  03_forest_eda.py  04_peakfit_eda.py
hiking_data_starter/hiking_data/scripts/: 01_test_durunubi.py  02_test_forest.py  03_fetch_and_preprocess.py
hiking_data_starter/hiking_data/src/: app.py
hiking_data_starter/hiking_data/src/hiking/: __init__.py  config.py  preprocessing.py
hiking_data_starter/hiking_data/src/hiking/apis/: __init__.py  durunubi.py  forest.py  knpa.py  tourism.py  weather.py
