[project]
name = "hiking-data"
version = "0.1.0"
description = "Korean hiking trail data analysis"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "tenacity>=8.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hiking"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
